Correction contraste bloc 5

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1985,23 +1985,6 @@ pre code {
     margin-left: auto
 }
 
-@media (min-width:768px) {
-    .container {
-        width: 750px
-    }
-}
-
-@media (min-width:992px) {
-    .container {
-        width: 970px
-    }
-}
-
-@media (min-width:1200px) {
-    .container {
-        width: 1170px
-    }
-}
 
 .container-fluid {
     padding-right: 15px;
